--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "proxy" : "http://localhost:8080",
+  "proxy": "http://localhost:8080",
   "name": "skillpage_front",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -13,7 +14,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.0.2",
+    "styled-components": "^6.0.4",
     "styled-reset": "^4.5.1",
     "web-vitals": "^2.1.4"
   },
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.8"
