--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,19 @@
 {
   "compilerOptions": {
+    "jsx": "react",
+    "lib": ["es6", "dom"],
+    "rootDir": "src",
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "target": "es5",
+    "sourceMap": true,
+    "moduleResolution": "node",
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
     "baseUrl": "src"
-  }
+  },
+  "include": ["./src"],
+  "exclude": ["node_modules", "build"]
 }
